Solved too much gap issue

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <div class="chart-card side-chart">
                     <h4 class="chart-card-header">Real-time Pollutant Level</h4>
                     <div class="chart-card-body">
-                        <canvas id="barChart" class="Bar"></canvas>
+                        <canvas id="barChart"></canvas>
                     </div>
                 </div>
     
