Changed placeholder comment inside of text form

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="col-md-8"> <!-- col-md-8을 사용하여 반응형 레이아웃으로 조정 -->
                         <div class="input-group mb-3">
                             <!-- Input field with custom styles -->
-                            <input type="text" id="locationInput" class="form-control" placeholder="Enter city, coordinates, or select a location on the map." aria-label="Location" aria-describedby="changeLocationButton">
+                            <input type="text" id="locationInput" class="form-control" placeholder="Enter city, coordinates, or click a location on the map." aria-label="Location" aria-describedby="changeLocationButton">
                             
                             <!-- Button with custom styles -->
                             <button id="changeLocationButton" class="btn btn-primary">Change Location</button>
